[package]
name = "SolarSearcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.16"
serde_json = "1.0.108"
nom = "7.1.3"
chumsky = "0.9.3"
headers = { version = "0.4.0", features = [] }
blocking = "1.5.1"
regex = { version = "1.10.2", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
